# pairplex

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml  pythonpublish.yml
pairplex/: count_features.py  make_fastq.py  pairplex.py  utils.py  version.py
pairplex/data/: pairplex_logo.psd
pairplex/docs/source/: cli.rst  general.rst  index.rst  install.rst
pairplex/features/: antigen_barcodes.txt
pairplex/scripts/: pairplex.py
